preventing word wrap on summary

--- a/html5-demos.appspot.com/static/common.css
+++ b/html5-demos.appspot.com/static/common.css
@@ -73,6 +73,7 @@ details > div {
 }
 details > summary {
   cursor: pointer;
+  white-space: nowrap;
 }
 button {
   display: inline-block;
